# yuuenchi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  yuuenchi.cabal
src/: Boom.hs  ChaoticMonoid.hs  Compact.hs  DeBruijn.hs  FList.hs  FinalFreer.hs  Freer.hs  GHCInception.hs  InlineEverything.hs  LazyRead.hs  OneShotIO.hs  StrictByteStringBuilder.hs  SyncExceptionIO.hs
