name:                  yuuenchi
version:               0.1.0.0
homepage:              https://github.com/TerrorJack/yuuenchi
license:               BSD3
license-file:          LICENSE
author:                Shao Cheng
maintainer:            astrohavoc@gmail.com
copyright:             (c) 2018 Shao Cheng
build-type:            Simple
extra-source-files:    CHANGELOG.md
                       README.md
cabal-version:         >=1.10

library
  exposed-modules:     DeBruijn
                       FList
                       GHCInception
                       InlineEverything
                       StrictByteStringBuilder
                       SyncExceptionIO
  ghc-options:         -Wall
  build-depends:       base >=4.12 && <4.13
                     , bytestring >= 0.10 && < 0.11
                     , binary >= 0.8 && <0.9
                     , directory >= 1.3 && <1.4
                     , filepath >= 1.4 && <1.5
                     , ghc >= 8.6 && <8.8
                     , ghc-compact >= 0.1 && <0.2
                     , mtl >= 2.2 && <2.3
                     , process >= 1.6 && <1.7
                     , template-haskell >= 2.14 && <2.15
  hs-source-dirs:      src
  default-language:    Haskell2010
